# microaeson

./: .gitignore  CHANGELOG.md  README.md  cabal.haskell-ci  microaeson.cabal
.github/workflows/: bump.yml  haskell-ci.yml  stack.yml
src-tests/: tests.hs
src/Data/Aeson/: Micro.hs
src/Data/Aeson/Micro/: Parser.hs  Scanner.x
