name:                microaeson
version:             0.1
synopsis:            A tiny JSON library with light dependency footprint
license:             GPL-3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
category:            Text, Web, JSON
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Data.Aeson.Micro
  build-depends:     base, bytestring
  hs-source-dirs:    src
  default-language:  Haskell2010
