cabal-version:       2.0

name:                microaeson
version:             0.1

synopsis:            A tiny JSON library with light dependency footprint
license:             GPL-3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
category:            Text, Web, JSON
build-type:          Simple
description: {

The [microaeson](https://hackage.haskell.org/package/aeson) package provides a smaller subset of the [aeson](https://hackage.haskell.org/package/aeson) API with less dependencies and a simpler implementation.
.
The API is designed in such a way to allow to easily convert client code written against @microaeson@'s API to use the full [aeson](https://hackage.haskell.org/package/aeson) API.

}

source-repository head
  type:              git
  location:          https://github.com/hvr/microaeson.git

library
  default-language:  Haskell2010
  other-extensions:  CPP
                     DeriveDataTypeable
                     DeriveGeneric
                     FlexibleInstances
                     GeneralizedNewtypeDeriving
                     MagicHash
                     OverloadedStrings

  hs-source-dirs:    src

  exposed-modules:   Data.Aeson.Micro
  other-modules:     Data.Aeson.Micro.Parser
                     Data.Aeson.Micro.Scanner

  build-depends:     array      ^>= 0.5.1.0
                   , base        >= 4.8.0.0   && < 5
                   , bytestring ^>= 0.10.6.0
                   , containers ^>= 0.5.6.2
                   , deepseq    ^>= 1.4.1.1

  build-tools:       alex       ^>= 3.2.0

  ghc-options:       -Wall

  if impl(ghc >= 8.0)
    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances
